[tool.poetry]
name = "cd0010-advanced-python-techniques-project-starter-1"
version = "0.1.0"
description = ""
authors = ["MichaelAlbers1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
